sw/inc/view.hxx
@@ -270,6 +270,8 @@ class SW_DLLPUBLIC SwView: public SfxViewShell
 
     int m_nMaxOutlineLevelShown = 10;
 
+    bool m_bDying = false;
+
     static constexpr sal_uInt16 MAX_ZOOM_PERCENT = 600;
     static constexpr sal_uInt16 MIN_ZOOM_PERCENT = 20;
 
@@ -351,6 +353,8 @@ class SW_DLLPUBLIC SwView: public SfxViewShell
 public: // #i123922# Needs to be called from a 2nd place now as a helper method
     SAL_DLLPRIVATE bool          InsertGraphicDlg( SfxRequest& );
     sal_Int32 m_nNaviExpandedStatus = -1;
+    void            SetFormShell( FmFormShell* pSh )    { m_pFormShell = pSh; }
+    virtual void    SelectShell();
 
 protected:
 
@@ -363,9 +367,6 @@ protected:
 
     // for SwWebView
     void            SetShell( SfxShell* pS )            { m_pShell = pS; }
-    void            SetFormShell( FmFormShell* pSh )    { m_pFormShell = pSh; }
-
-    virtual void    SelectShell();
 
     virtual void    Activate(bool) override;
     virtual void    Deactivate(bool) override;
@@ -621,6 +622,8 @@ public:
 
     SwView(SfxViewFrame* pFrame, SfxViewShell*);
     virtual ~SwView() override;
+
+    void SetDying() override;
 
     void NotifyDBChanged();
 
